--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -1,6 +1,8 @@
 {
-  "appTitle": "todo_freezed_riverpod_2",
-  "@appTitle": {
-    "description": "The title of the application"
-  }
+    "appTitle": "app_template_riverpod",
+    "@appTitle": {
+        "description": "The title of the application"
+    },
+    "error":"error"
+
 }
